docs/css/main.css
/* ... */
  .highlight .si {
    color: #d14; }
  .highlight .sx {
    color: #d14; }
  .highlight .sr {
    color: #009926; }
  .highlight .s1 {
    color: #d14; }
  .highlight .ss {
    color: #990073; }
  .highlight .bp {
    color: #999; }
  .highlight .vc {
    color: #008080; }
  .highlight .vg {
    color: #008080; }
  .highlight .vi {
    color: #008080; }
  .highlight .il {
    color: #099; }

.content {
  padding: 40px 15px; }

.jumbotron {
  margin-bottom: -48px; }

.jumbotron .container {
  padding-top: 40px; }

body > div.container {
  flex: 1 0 auto;
  /* Prevent Chrome, Opera, and Safari from letting these items shrink to smaller than their content's default minimum size. */ }

.navbar-brand {
  padding: 11px 15px 5px 15px; }

div.navbar-brand {
  width: 28px;
  padding: 0;
  margin: 0; }

.grow {
  transition: all .2s ease-in-out; }

.grow:hover {
  transform: rotate(10deg) scale(1.3); }

.full {
  width: 100%; }

html {
  position: relative;
  min-height: 100%; }

body {
  display: flex;
  flex-direction: column;
  height: 100vh;
  /* Avoid the IE 10-11 `min-height` bug. */ }

.footer {
  flex-shrink: 0;
  /* Prevent Chrome, Opera, and Safari from letting these items shrink to smaller than their content's default minimum size. */
  display: flex;
  flex-direction: row;
  justify-self: flex-end;
  justify-content: flex-start;
  align-items: center;
  height: 50px;
  background-color: #00181A; }

.footer > .container {
  padding-right: 15px;
  padding-left: 15px; }

.container .text-muted {
  color: #c6c6c6; }

div.code {
  width: 36em;
  margin: 0 0;
  padding: 0 0;
  position: relative; }

div.langFilter {
  position: absolute;
  top: 100px;
  left: 5%; }

div.code div.langFilter {
  position: absolute;
  top: -15px;
  left: 0; }

div.dropdown {
  position: absolute;
  top: 0;
  left: 14px;
  padding: 0 10px;
  text-align: left;
  border: 1px solid #888;
  background-color: #ffd; }

div.lang div.dropdown {
  position: absolute;
  left: 14px;
  top: 0;
  padding: 0 10px;
  width: 20px;
  text-align: left;
  border: 1px solid #888;
  background-color: #ffd; }

div.notice {
  text-align: center;
  font-style: italic;
  font-weight: bold;
  border: 1px solid goldenrod;
  margin: 38px 0 0 0;
  padding: 12px;
  background-color: #FEEFB3;
  color: #9F6000;
  width: 60%;
  max-width: 660px; }

pre.prettyprint {
  padding: 10px;
  max-width: 660px; }

/* Submenu */
#subnav {
  position: absolute;
  top: 100px;
  left: 76%;
  background-color: #ffd;
  width: 24%;
  margin: 1em 0 0;
  padding: 0.25em;
  border: solid #ccc;
  border-width: .1em .1em .1em .1em; }

#subnav ul {
  margin: 0;
  padding: 0;
  list-style: none; }

#subnav li {
  margin: 0;
  padding: 2px 0 2px; }

#subnav a {
  font: 1em "Times New Roman", Roman, serif;
  margin: 0;
  padding: 0 0 0 26px;
  text-transform: uppercase;
  text-decoration: none;
  color: #000;
  white-space: nowrap;
  background: url(img/bulletOff.gif) no-repeat 10px 50%;
  display: block; }

#subnav ul ul a {
  padding: 0 0 0 46px;
  background-position: 30px 50%; }

#subnav ul ul ul a {
  padding: 0 0 0 66px;
  background-position: 50px 50%; }

#subnav ul ul ul ul a {
  padding: 0 0 0 86px;
  background-position: 70px 50%; }

#subnav ul ul ul ul ul a {
  padding: 0 0 0 106px;
  background-position: 90px 50%; }

#subnav li#current a {
  background-image: url(img/bulletOn.gif); }

#subnav li a:hover {
  background-image: url(img/bulletOn.gif); }

#help_content {
  max-width: 660px; }
  #help_content p {
    padding: 0;
    margin: 0 0 1em 0; }

div.help {
  min-width: 992px; }

pre.programtext {
  max-width: 660px; }

ul.across {
  width: 100%;
  display: block;
  list-style: none; }

ul.across li {
  float: left;
  display: block;
  width: 9em; }

